@@ -222,22 +222,22 @@ public class Heap implements java.io.Serializable
         }
     
     /**
-     Produces a new heap which is the union of this heap with the other.
-     The original heaps are not modified.  The new heap is returned.
-     */
+       Produces a new heap which is the union of this heap with the other.
+       The original heaps are not modified.  The new heap is returned.
+    */
     public Heap merge(Heap other) 
-    {
-    	int n = this.numElem + other.numElem;
-    	Comparable[] combinedKeys = new Comparable[n];
-    	Object[] combinedObjects = new Object[n];
-    	
-    	System.arraycopy(keys, 0, combinedKeys, 0, this.numElem);
-    	System.arraycopy(other.keys, 0, combinedKeys, this.numElem, other.numElem);
+        {
+        int n = this.numElem + other.numElem;
+        Comparable[] combinedKeys = new Comparable[n];
+        Object[] combinedObjects = new Object[n];
+        
+        System.arraycopy(keys, 0, combinedKeys, 0, this.numElem);
+        System.arraycopy(other.keys, 0, combinedKeys, this.numElem, other.numElem);
 
-    	System.arraycopy(objects, 0, combinedObjects, 0, this.numElem);
-    	System.arraycopy(other.objects, 0, combinedObjects, this.numElem, other.numElem);
+        System.arraycopy(objects, 0, combinedObjects, 0, this.numElem);
+        System.arraycopy(other.objects, 0, combinedObjects, this.numElem, other.numElem);
 
-    	return new Heap(combinedKeys, combinedObjects);
-    }
+        return new Heap(combinedKeys, combinedObjects);
+        }
     
     }
